welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:6: error: reassignment to val
		nbPas =nbPas + 1
                      ^