welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
var nbPas: Int=0
def move(nbPas: Int,versLAvant: Boolean)={
	if(versLAvant == true){
		avance()
		nbPas =nbPas + 1
	}
}
